--- a/custom_components/ge_home/manifest.json
+++ b/custom_components/ge_home/manifest.json
@@ -5,7 +5,7 @@
   "integration_type": "hub",
   "iot_class": "cloud_push",
   "documentation": "https://github.com/simbaja/ha_gehome",
-  "requirements": ["gehomesdk==0.5.30","magicattr==0.1.6","slixmpp==1.8.3"],
-  "codeowners": ["@simbaja"],	
+  "requirements": ["git+https://github.com/backyardaussie/gehome#WH1060P4AA","magicattr==0.1.6","slixmpp==1.8.3"],
+  "codeowners": ["@simbaja","backyardaussie"],	
   "version": "0.6.14"
 }
